welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: not found: value color
  color=get couleurSol()
  ^SlugTracking:5: error: not found: value color
  if (color==Color.green){
      ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if (color==Color.green){
  ^