welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  avance()
  color=get couleurSol()
  if (color==Color.green){
    return true
  }
    // Write your code here
}